# g3w-admin-sentry-monitor

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
sentry_monitor/: __init__.py  apps.py
